fixed overflow scrolls and make it hidden

--- a/web2/src/main/resources/style.css
+++ b/web2/src/main/resources/style.css
@@ -1,4 +1,3 @@
 body {
-    margin: 0 !important;
-    padding: 0 !important;
+    overflow: hidden;
 }
